
Kea 0.9 released on August 29, 2014

832.	[bug]		jiri
	Compilation fix for PostgreSQL on i686. Thanks to Jiri Popelka
	from RedHat for providing a patch!
	(Trac #3532, git 96a06654f2177444dcea3a0e9f6fa06947855497)

831.	[func]		marcin
	DHCP servers check if the interfaces specified in the configuration,
	to be used to receive DHCP messages, are present in the system.
	If the interface doesn't exist, an error is reported. In addition,
	the SO_REUSEPORT flag is set for IPv6 sockets as multiple multicast
	sockets can be bound to the DHCPv6 server port.
	(Trac #3512, git 5cbbab2d01c6e1bf6d563ba64d80bc6bc857f73d)

830.	[build]		jreed
	The configure script no longer requires pkg-config.
	(Trac #3511, git 99a5a2db8c011b358873d485ac48f7c78ac6374c)

829.	[build]		wlodek
	Lettuce DNS tests removed with all related python code,
	most of them will be used in Forge project which can be found
	http://kea.isc.org/wiki/IscForge
	(Trac #3420, git e51bcbeedbc169050751c1b896726965243667be)

828.	[bug]		marcin
	Corrected the IfaceMgrTest.detectIface unit test that failed on
	Linux systems with virtual interfaces present.
	(Trac #3527, git 7aa01a6965b6e9fc39ff005803cada7f58f2e628)

827.	[build]		jiri, tomek
	Deprecated AC_PROG_LIBTOOL macro replaced by LT_INIT. Thanks to
	Jiri Popelka from RedHat for providing a patch!
	(Trac #3525, git 6c0aacf29fae1d0501ca69ff6324df8d4fc8c7ee)

826.	[bug]		jiri, tomek
	Compilation fix for Red Hat running on armv7. Thanks to Jiri
	Popelka from RedHat for providing a patch!
	(Trac #3526, git eac5a80472dcb78b538c2ed34cc0534f801e5145)

825.	[bug]		jiri, tomek
	Example JSON configuration files permission fix. Thanks to Jiri
	Popelka	from RedHat for providing a patch!
	(Trac #3524, git 822a39ba33870f70787a1f666aed772e06d04d79)

824.	[bug]		marcin
	Kea deamons report configuration summary when the configuration is
	applied successfully.
	(Trac #3477, git f39d208024f720f72c931016cfa50a54e80f8c61)

823.	[build]		tomek